fix: prevent dots and dialog content overlap when loading

--- a/src/ame/lightbox/ame-lightbox.scss
+++ b/src/ame/lightbox/ame-lightbox.scss
@@ -27,7 +27,7 @@ $animationDuration: .2s;
     transition: width $animationDuration ease, height $animationDuration ease;
     display: block;
     margin: auto;
-    min-height: 70px;
+    min-height: 90px;
     img{
       width: 100%;
       height: 100%;
@@ -66,5 +66,4 @@ $animationDuration: .2s;
       display: inline-block;
     }
   }
-
 }
